# wasm-test

./: Cargo.toml  wasm-test.code-workspace
benches/: general.rs  serialization.rs  wasmer.rs  wasmtime.rs
crates/runtime-example/: Cargo.toml
crates/runtime-example/src/: lib.rs  main.rs
crates/runtime-example/src/host_functions/: add.rs  div.rs  fold.rs  gt.rs  gte.rs  lt.rs  lte.rs  mul.rs  sub.rs
crates/wasm-playground/: Cargo.toml  standard.wat
crates/wasm-playground/benches/: context.rs  serialization.rs  stack.rs  wasmtime_bench.rs
crates/wasm-playground/src/: lib.rs  runtime.rs  tests.rs
crates/wasm-playground/src/runtime/: alloc.rs  native_functions.rs
crates/wasm-playground/src/runtime/native_functions/: memory_serialize.rs  wasm_native.rs
crates/wasm-playground/src/tests/runtime/: alloc.rs  context.rs
crates/wasm-rustref/: Cargo.toml  justfile
crates/wasm-rustref/.cargo/: config.toml
crates/wasm-rustref/benches/: context.rs  serialization.rs  stack.rs  wasmer.rs  wasmtime_bench.rs
crates/wasm-rustref/src/: frames.rs  hostptr.rs  lib.rs  macros.rs  runtime.rs  stack.rs
crates/wasm-rustref/src/compiler/: traversals.rs  wasm_generator.rs
crates/wasm-rustref/src/runtime/: stack.rs
crates/wasm-rustref/src/runtime/native_functions/: rustref.rs
crates/wasm-stdlib/: Cargo.toml  Makefile.toml  README.md
crates/wasm-stdlib/src/: lib.rs
crates/wasm-test/: BENCHMARKS.md  Cargo.toml  README.md  justfile
crates/wasm-test/.cargo/: config.toml
crates/wasm-test/benches/: context.rs  serialization.rs  stack.rs  wasmer.rs  wasmtime.rs  wasmtime_bench.rs
crates/wasm-test/src/: compiler.rs  lib.rs  runtime.rs  serialization.rs  tests.rs
crates/wasm-test/src/compiler/: visitors.rs
crates/wasm-test/src/runtime/: alloc.rs  native_functions.rs  objpool.rs  stack.rs
crates/wasm-test/src/runtime/native_functions/: extref.rs  memory_serialize.rs  rustref.rs  rustref_stack.rs  wasm_native.rs
crates/wasm-test/src/tests/: runtime.rs
crates/wasm-test/src/tests/runtime/: alloc.rs  context.rs  helpers.rs  native_functions.rs  stack.rs
src/: compiler.rs  lib.rs  main.rs  native_functions.rs  runtime.rs  serialization.rs  tests.rs  wasm_generator.rs
src/compiler/: traversals.rs  visitors.rs  wasm_generator.rs
src/runtime/: alloc.rs  native_functions.rs
src/tests/: compiler.rs  native_functions.rs  serialization.rs
