[package]
name = "runtime-example"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm_rustref = { path = "../wasm-rustref" }
walrus = "0.20.1"
wasmtime = "13.0.0"
clarity-vm = { version = "2" }
paste = "1.0.14"