[package]
name = "wasm-rustref"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[features]
bench = []
logging = ["dep:env_logger"]
coredump = []

[dependencies]
walrus = "0.20.1"
wasmtime = "13.0.0"
clarity-vm = { version = "2" }
paste = "1.0.14"
log = { version = "0.4.20", features = ["max_level_trace", "release_max_level_warn"] }
env_logger = { version = "0.10.0", optional = true }
rand = "0.8.5"